--- a/app/scss/layout/_inedx.scss
+++ b/app/scss/layout/_inedx.scss
@@ -136,7 +136,7 @@
     }
 }
 
-.assortment {
+.assortement {
     background-color: $bg-dark;
     padding: 87px 0 124px;
     position: relative;
@@ -176,7 +176,7 @@
                 background-color: $black-opacity;
             }
 
-            .assortment__hover {
+            .assortement__hover {
                 opacity: 1;
             }
         }
@@ -535,7 +535,7 @@
         }
     }
 
-    .assortment {
+    .assortement {
         padding: 37px 0 59px;
 
         &__card {
@@ -690,7 +690,7 @@
         }
     }
 
-    .assortment {
+    .assortement {
 
         .title-text-border {
             font-size: 96px;
@@ -832,7 +832,7 @@
         }
     }
 
-    .assortment {
+    .assortement {
         padding: 28px 0 0;
 
         .title-text-border {
@@ -1034,7 +1034,7 @@
         }
     }
 
-    .assortment {
+    .assortement {
         .title-text-border {
             font-size: 36px;
             line-height: 43px;
