--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,6 +6,7 @@
 @import "./layout/header";
 @import "./layout/inedx";
 @import "./layout/calendar";
+@import "./layout/roletta";
 
 
 @import "./layout/footer";
