--- a/app/scss/utils/_variables.scss
+++ b/app/scss/utils/_variables.scss
@@ -10,6 +10,7 @@ sans-serif;
 //text, titles
 $text-color: #000;
 $text-color-white: #fff;
+$text-color-dark: #2E2E2E;
 $color-top-menu: #ebebeb;
 $title-color: #000;
 $title-color-wite: #fff;
