--- a/app/scss/layout/_roletta.scss
+++ b/app/scss/layout/_roletta.scss
@@ -122,3 +122,103 @@
         }
     }
 }
+
+.roletta-assortement {
+    padding: 119px 0 200px;
+
+    &__title {
+        margin-bottom: 64px;
+    }
+
+    &__card {
+        padding: 34px 19px 16px;
+        text-align: center;
+        height: 100%;
+
+        >h4 {
+            font-size: $font-size-h3;
+            line-height: $line-height-h3;
+            margin-bottom: 16px;
+            height: 61px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        >p {
+            margin-bottom: 30px;
+        }
+
+        >img {
+            position: relative;
+            right: -19px;
+            width: 100%;
+        }
+
+        >small {
+            font-weight: 100;
+            font-size: 14px;
+            line-height: 17px;
+            opacity: 0.5;
+            display: block;
+            width: 78%;
+            margin: 20px auto 0;
+        }
+    }
+
+    &__color {
+        position: relative;
+        background-color: $base-bg;
+        margin-top: 55px;
+        padding: 16px 32px 0 65px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 1;
+
+        .group-radio-input {
+            display: flex;
+            flex-wrap: wrap;
+
+            >h3 {
+                width: 100%;
+                font-size: $font-size-h2;
+                line-height: $line-height-h2;
+                font-weight: 900;
+                margin-bottom: 10px;
+            }
+
+            .label-radio-input {
+                margin: 50px 65px 0 0;
+
+                &:nth-of-type(6n) {
+                    margin-right: 0;
+                }
+            }
+        }
+    }
+}
+
+.roletta-download-catalog {
+    margin-bottom: 212px;
+    background-color: $bg-dark;
+
+    .download-catalog {
+        &__wrap {
+            p {
+                color: $text-color-white;
+                ;
+            }
+        }
+
+        &__title {
+            color: $text-color-white;
+        }
+
+        &__img {
+            top: -180px;
+            right: -150px;
+            max-width: 900px;
+        }
+    }
+}
