--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,6 +6,6 @@
 @import "./layout/header";
 @import "./layout/inedx";
 @import "./layout/calendar";
-
+@import "./layout/promotion";
 
 @import "./layout/footer";
