added new image and section on page

--- a/app/scss/layout/_footer.scss
+++ b/app/scss/layout/_footer.scss
@@ -70,7 +70,7 @@
     &__line {
         width: 100%;
         opacity: 0.1;
-        border: 1px solid $white;
+        border-top: 1px solid $white;
     }
 
     &__right-col {
