--- a/app/css/style.css
+++ b/app/css/style.css
@@ -21,6 +21,8 @@ button { border: none; background-color: transparent; cursor: pointer; }
 
 img, iframe { max-width: 100%; }
 
+p { margin: 0; }
+
 @font-face { font-family: 'Museo Sans Cyrl'; src: url("../fonts/MuseoSans/MuseoSansCyrl-100.eot"); src: local("../fonts/MuseoSans/MuseoSansCyrl-100"), url("../fonts/MuseoSans/MuseoSansCyrl-100.eot?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-100.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-100.ttf") format("truetype"); font-weight: 100; font-style: normal; }
 
 @font-face { font-family: 'Museo Sans Cyrl'; src: url("../fonts/MuseoSans/MuseoSansCyrl-300.eot"); src: local("../fonts/MuseoSans/MuseoSansCyrl-300"), url("../fonts/MuseoSans/?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-300.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-300.ttf") format("truetype"); font-weight: 300; font-style: normal; }
@@ -128,7 +130,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .btn-red:hover { background: #DA2E00; box-shadow: 0px 10px 35px rgba(216, 48, 3, 0.4); }
 
-.line { width: 100%; opacity: 0.1; border: 1px solid #000; }
+.line { width: 100%; opacity: 0.1; border-top: 1px solid #000; }
 
 .social-networks { display: -webkit-flex; display: -ms-flexbox; display: flex; }
 
@@ -146,7 +148,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .title-text-border { color: #fff; font-weight: 900; font-size: 144px; line-height: 173px; text-shadow: -1px -1px 0 #d3d3d3, 1px -1px 0 #d3d3d3, -1px 1px 0 #d3d3d3, 1px 1px 0 #d3d3d3; text-align: center; margin-bottom: -38px; position: relative; z-index: -1; }
 
-.input-bark, .input-light { height: 55px; width: 100%; border: none; padding: 0 21px; border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0; -ms-border-radius: 0; -o-border-radius: 0; box-shadow: none; font-size: 18px; line-height: 22px; }
+.input-bark, .input-light { height: 55px; width: 100%; border: none; padding: 0 21px; border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0; -ms-border-radius: 0; -o-border-radius: 0; box-shadow: none; font-size: 18px; line-height: 22px; font-weight: 300; }
 
 .input-bark { background-color: #4b4b4b; color: #fff; }
 
@@ -467,7 +469,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .reviews__tab .tab-nav { width: 300px; position: absolute; top: 10px; left: 0; }
 
-.reviews__header { position: relative; margin-bottom: 42px; }
+.reviews__header { position: relative; margin-bottom: 37px; }
 
 .reviews__header .icon-social { position: absolute; left: 40px; top: 40px; width: 25px; display: block; }
 
@@ -532,7 +534,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
   .slider-promotions__image { height: 360px; }
   .slider-promotions .slider-dark__arrows { top: -70px; }
   .reviews__tab .tab-nav { width: 200px; }
-  .reviews__header { margin-bottom: 32px; }
+  .reviews__header { margin-bottom: 25px; }
   .reviews__header .icon-social { left: 35px; top: 35px; width: 20px; }
   .reviews__avatar { width: 60px; height: 60px; border-radius: 50%; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; overflow: hidden; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; min-width: 60px; }
   .reviews__avatar > img { width: 100%; height: 100%; -o-object-fit: cover; object-fit: cover; }
@@ -723,11 +725,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .function-roletta__item { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; font-size: 24px; line-height: 29px; font-weight: 500; margin-bottom: 58px; }
 
-.function-roletta__item > p { margin-left: 30px; margin-bottom: 0; }
-
-.function-roletta .circle { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; width: 160px; min-width: 160px; height: 157px; border-radius: 50%; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; border: 1px solid #B1B1B1; }
-
-.function-roletta .circle_big { width: 255px; min-width: 255px; height: 251px; }
+.function-roletta__item > p { margin-left: 30px; }
 
 .function-roletta .mb-87 { margin-bottom: 87px; }
 
@@ -740,6 +738,10 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 .function-roletta__form > form { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; margin-top: 23px; }
 
 .function-roletta__form > form .btn-red { min-width: 350px; margin-left: 30px; }
+
+.circle { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; width: 160px; min-width: 160px; height: 157px; border-radius: 50%; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; border: 1px solid #B1B1B1; }
+
+.circle_big { width: 255px; min-width: 255px; height: 251px; }
 
 .roletta-assortement { padding: 119px 0 200px; }
 
@@ -771,7 +773,39 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .roletta-download-catalog .download-catalog__title { color: #fff; }
 
-.roletta-download-catalog .download-catalog__img { top: -180px; right: -150px; max-width: 900px; }
+.roletta-download-catalog .download-catalog__img { top: -190px; right: -150px; max-width: 900px; }
+
+.roletta-control { padding: 20px 0 151px; background: url(../image/roletta/image-bg.png) no-repeat top 740px right; }
+
+.roletta-control__header { position: relative; margin-bottom: 55px; }
+
+.roletta-control__header .title-section { margin-bottom: 22px; }
+
+.roletta-control__header > img { position: absolute; right: -226px; top: -25px; z-index: 1; }
+
+.roletta-control__header p { max-width: 475px; }
+
+.roletta-control__subtitle { font-size: 36px; line-height: 43px; font-weight: 900; margin-bottom: 17px; }
+
+.roletta-control__subtitle > span { display: inline-block; margin-right: 20px; color: #B1B1B1; }
+
+.roletta-control__auto { padding: 56px 0 110px; }
+
+.roletta-control__auto p { max-width: 455px; }
+
+.roletta-control__group-list { display: -webkit-flex; display: -ms-flexbox; display: flex; margin: 61px 0; }
+
+.roletta-control__list { -webkit-flex: 0 0 41.666667%; -ms-flex: 0 0 41.666667%; flex: 0 0 41.666667%; max-width: 41.666667%; margin-right: 30px; }
+
+.roletta-control__list:last-of-type { max-width: 33%; }
+
+.roletta-control__list > li { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; margin-bottom: 42px; }
+
+.roletta-control__list > li .circle { width: 65px; min-width: 65px; height: 65px; margin-right: 30px; font-size: 24px; line-height: 29px; font-weight: 100; color: #B1B1B1; }
+
+.roletta-control__list > li p > small { display: block; font-weight: 100; font-size: 14px; line-height: 17px; margin-top: 9px; }
+
+.roletta-control__text-big { font-size: 36px; line-height: 43px; max-width: 63% !important; }
 
 /*
 ================================================================================
@@ -798,7 +832,7 @@ body { font-family: "Museo Sans Cyrl", sans-serif; background-color: #fff; heigh
 
 .footer__link { display: block; color: #fff; text-align: center; text-decoration: underline; opacity: 0.8; }
 
-.footer__line { width: 100%; opacity: 0.1; border: 1px solid #fff; }
+.footer__line { width: 100%; opacity: 0.1; border-top: 1px solid #fff; }
 
 .footer__right-col { text-align: right; }
 
