--- a/app/scss/layout/_roletta.scss
+++ b/app/scss/layout/_roletta.scss
@@ -72,24 +72,6 @@
 
         >p {
             margin-left: 30px;
-            margin-bottom: 0;
-        }
-    }
-
-    .circle {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        width: 160px;
-        min-width: 160px;
-        height: 157px;
-        @include radius(50%);
-        border: 1px solid $light-gray;
-
-        &_big {
-            width: 255px;
-            min-width: 255px;
-            height: 251px;
         }
     }
 
@@ -120,6 +102,23 @@
                 margin-left: 30px;
             }
         }
+    }
+}
+
+.circle {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 160px;
+    min-width: 160px;
+    height: 157px;
+    @include radius(50%);
+    border: 1px solid $light-gray;
+
+    &_big {
+        width: 255px;
+        min-width: 255px;
+        height: 251px;
     }
 }
 
@@ -207,7 +206,6 @@
         &__wrap {
             p {
                 color: $text-color-white;
-                ;
             }
         }
 
@@ -216,9 +214,103 @@
         }
 
         &__img {
-            top: -180px;
+            top: -190px;
             right: -150px;
             max-width: 900px;
         }
+    }
+}
+
+.roletta-control {
+    padding: 20px 0 151px;
+    background: url(../image/roletta/image-bg.png) no-repeat top 740px right;
+
+    &__header {
+        position: relative;
+        margin-bottom: 55px;
+
+        .title-section {
+            margin-bottom: 22px;
+        }
+
+        >img {
+            position: absolute;
+            right: -226px;
+            top: -25px;
+            z-index: 1;
+        }
+
+        p {
+            max-width: 475px;
+        }
+    }
+
+    &__subtitle {
+        font-size: $font-size-h2;
+        line-height: $line-height-h2;
+        font-weight: 900;
+        margin-bottom: 17px;
+
+        >span {
+            display: inline-block;
+            margin-right: 20px;
+            color: $light-gray;
+        }
+    }
+
+    &__auto {
+        padding: 56px 0 110px;
+
+        p {
+            max-width: 455px;
+        }
+    }
+
+    &__group-list {
+        display: flex;
+        margin: 61px 0;
+    }
+
+    &__list {
+        flex: 0 0 41.666667%;
+        max-width: 41.666667%;
+        margin-right: 30px;
+
+        &:last-of-type {
+            max-width: 33%;
+        }
+
+        >li {
+            display: flex;
+            align-items: center;
+            margin-bottom: 42px;
+
+            .circle {
+                width: 65px;
+                min-width: 65px;
+                height: 65px;
+                margin-right: 30px;
+                font-size: $font-size-h3;
+                line-height: $line-height-h3;
+                font-weight: 100;
+                color: $light-gray;
+            }
+
+            p {
+                >small {
+                    display: block;
+                    font-weight: 100;
+                    font-size: 14px;
+                    line-height: 17px;
+                    margin-top: 9px;
+                }
+            }
+        }
+    }
+
+    &__text-big {
+        font-size: $font-size-h2;
+        line-height: $line-height-h2;
+        max-width: 63% !important;
     }
 }
