added new image

--- a/app/scss/layout/_inedx.scss
+++ b/app/scss/layout/_inedx.scss
@@ -1,3 +1,9 @@
+/*
+================================================================================
+|                                     INDEX PAGE                               |
+================================================================================
+*/
+
 .first-screen {
     margin-top: -2px;
     height: calc(100vh - 121px);
