--- a/app/scss/utils/_variables.scss
+++ b/app/scss/utils/_variables.scss
@@ -14,6 +14,7 @@ $text-color-dark: #2E2E2E;
 $color-top-menu: #ebebeb;
 $title-color: #000;
 $title-color-wite: #fff;
+$color-placeholder: #797979;
 
 $font-size-h1: 60px;
 $line-height-h1: 72px;
@@ -27,6 +28,7 @@ $bg-dark: #25282a;
 $bg-color-input: #4b4b4b;
 $bg-color-input-light: #F1F1F1;
 $bg-spinner: #f7f7f7;
+$bg-article: #F5F5F5;
 
 $gray: #979797;
 $red: #ff1b1b;
