--- a/app/scss/layout/_general.scss
+++ b/app/scss/layout/_general.scss
@@ -1,3 +1,9 @@
+/*
+================================================================================
+|                                 GENERAL STYLE                                |
+================================================================================
+*/
+
 body {
     font-family: $base-font-family;
     background-color: $base-bg;
@@ -49,10 +55,8 @@ body {
     }
 }
 
-.line {
-    width: 100%;
-    opacity: 0.1;
-    border-top: 1px solid $black;
+.border-bot {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .social-networks {
@@ -110,7 +114,7 @@ body {
     box-shadow: none;
     font-size: $base-font-size;
     line-height: $base-line-height;
-    font-weight: 300;
+    font-weight: 100;
 }
 
 .input-bark {
@@ -131,7 +135,7 @@ body {
     margin-bottom: 10px;
 
     &::placeholder {
-        color: #797979;
+        color: $color-placeholder;
         font-weight: 100;
     }
 }
@@ -147,7 +151,8 @@ body {
     box-shadow: 0px 100px 100px rgba(0, 0, 0, 0.08);
 }
 
-// style input type="number"
+/* style input type="number" */
+
 .spinner {
     width: 255px;
     position: relative;
@@ -212,7 +217,8 @@ body {
     }
 }
 
-/*style for checkbox*/
+/* style for checkbox start */
+
 .label-checkbox {
     display: block;
     position: relative;
@@ -257,7 +263,9 @@ body {
     }
 }
 
-// style radio input
+
+/* style radio input start */
+
 .label-radio-input {
     display: block;
     position: relative;
@@ -295,7 +303,8 @@ body {
     }
 }
 
-// style tabs navigation
+
+/* style tabs navigation start */
 
 .nav-pills {
     .nav-link {
@@ -343,6 +352,7 @@ body {
     }
 }
 
+/* form dowmload catalog start */
 .download-catalog {
     &__wrap {
         position: relative;
@@ -384,6 +394,122 @@ body {
         max-width: 830px;
     }
 }
+
+.order-takes {
+    padding: 97px 0 100px;
+    background: url(../image/roletta/bg-vector.svg) no-repeat center right;
+    background-size: 48%;
+
+    &__subtitle {
+        font-size: $font-size-h2;
+        line-height: $line-height-h2;
+        color: $text-color-white;
+    }
+}
+
+/* section ready to order start */
+
+.ready-order {
+    padding: 80px 0 136px;
+
+    &__form {
+        margin-bottom: 30px;
+        padding: 33px 96px 42px 66px;
+        display: flex;
+        align-items: center;
+
+        >form {
+            max-width: 350px;
+
+            .input-light {
+                margin-bottom: 20px;
+            }
+        }
+    }
+
+    &__number {
+        display: inline-block;
+        font-size: 100px;
+        line-height: 120px;
+        font-weight: 900;
+        opacity: 0.2;
+    }
+
+    &__desc {
+        display: flex;
+        align-items: center;
+        max-width: 570px;
+        margin-right: 30px;
+    }
+
+    &__text {
+        margin-left: 48px;
+
+        >h4 {
+            font-size: $font-size-h3;
+            line-height: $line-height-h3;
+            margin-bottom: 24px;
+        }
+    }
+
+    &__card {
+        text-align: center;
+        padding: 10px 40px 18px;
+        height: 100%;
+    }
+}
+
+/* section FAQ start */
+
+.FAQ {
+    padding: 49px 0 71px;
+
+    .title-text-border {
+        margin-bottom: -126px;
+    }
+
+}
+
+.accordion {
+    margin-top: 120px;
+
+    &__item {
+        margin-bottom: 26px;
+
+        &:last-of-type {
+            margin-bottom: 0;
+        }
+    }
+
+    &__title {
+        font-weight: 900;
+        padding-bottom: 26px;
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+
+        >span {
+            display: block;
+            margin-right: 25px;
+            font-size: $font-size-h3;
+
+            &.rotate {
+                @include transform(rotate(180deg));
+            }
+        }
+    }
+
+    article {
+        padding: 26px 62px 27px 32px;
+        background-color: $bg-article;
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 1440px) {
+    .order-takes {
+        background-size: 52%;
+    }
+}
+
 
 @media only screen and (max-width: 1199.8px) {
     body {
@@ -433,6 +559,10 @@ body {
             height: 45px;
             padding-left: 42px;
         }
+    }
+
+    .bread-crumbs {
+        display: none;
     }
 }
 
