--- a/app/scss/layout/_roletta.scss
+++ b/app/scss/layout/_roletta.scss
@@ -1,3 +1,9 @@
+/*
+================================================================================
+|                                   ROLETTA PAGE                               |
+================================================================================
+*/
+
 .roletta-header {
     position: relative;
     color: $text-color-white;
@@ -106,7 +112,7 @@
 }
 
 .circle {
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     width: 160px;
@@ -224,6 +230,8 @@
 .roletta-control {
     padding: 20px 0 151px;
     background: url(../image/roletta/image-bg.png) no-repeat top 740px right;
+    background-size: 44%;
+    overflow-x: hidden;
 
     &__header {
         position: relative;
@@ -233,7 +241,7 @@
             margin-bottom: 22px;
         }
 
-        >img {
+        .image {
             position: absolute;
             right: -226px;
             top: -25px;
@@ -260,9 +268,17 @@
 
     &__auto {
         padding: 56px 0 110px;
+        border-top: 1px solid rgba(0, 0, 0, 0.1);
 
         p {
             max-width: 455px;
+
+            >b {
+                display: block;
+                font-weight: 900;
+                max-width: 254px;
+                margin-bottom: 40px;
+            }
         }
     }
 
@@ -312,5 +328,214 @@
         font-size: $font-size-h2;
         line-height: $line-height-h2;
         max-width: 63% !important;
+        margin-bottom: 115px;
+    }
+
+    &__img-circle {
+        text-align: center;
+
+        .circle {
+            width: 160px;
+            height: 160px;
+            margin-bottom: 30px;
+        }
+    }
+
+    &__manual {
+        padding-top: 158px;
+
+        .roletta-control__subtitle {
+            margin-bottom: 60px;
+        }
+
+        .circle {
+            border: none;
+            margin-bottom: 20px;
+        }
+    }
+}
+
+.roletta-calendar {
+    padding: 109px 0 155px;
+}
+
+.roletta-slider {
+    padding: 90px 0 137px;
+
+    &__title {
+        font-size: $font-size-h2;
+        line-height: $line-height-h2;
+        margin-bottom: 20px;
+    }
+}
+
+.slider-brands {
+    width: calc(100% + 30px);
+    margin-left: -15px;
+
+    &.slick-slider .slick-track {
+        padding: 20px 0;
+    }
+
+    .slick-arrow {
+        width: 20px;
+        height: 10px;
+        color: transparent;
+        @include transition(width 0.3s ease);
+        padding: 0;
+        position: absolute;
+        bottom: -42px;
+        z-index: 10;
+    }
+
+    .slick-next {
+        background: url(../image/icons/arrow-left-dark.svg) no-repeat center center;
+        @include transform(rotate(180deg));
+        margin-left: 16px;
+        right: 16px;
+
+        &:hover {
+            width: 54px;
+            @include transform(rotate(0));
+            background: url(../image/icons/arrow-right-dark.svg) no-repeat center center;
+        }
+    }
+
+    .slick-prev {
+        background: url(../image/icons/arrow-left-dark.svg) no-repeat center center;
+        margin-right: 16px;
+        right: 80px;
+
+        &:hover {
+            width: 54px;
+            @include transform(rotate(180deg));
+            background: url(../image/icons/arrow-right-dark.svg) no-repeat center center;
+            right: 50px;
+
+        }
+    }
+
+    &__item {
+        height: 200px;
+        margin: 0 15px;
+        display: flex !important;
+        align-items: center;
+        padding: 0 48px;
+        background-color: $base-bg;
+        box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.2);
+    }
+}
+
+@media only screen and (max-width: 1600px) {
+    .roletta-control {
+        background-position: top 815px right -100px;
+    }
+}
+
+@media only screen and (max-width: 1440px) {
+    .roletta-header {
+        &__img {
+            position: absolute;
+            bottom: 192px;
+            right: -15px;
+            width: 44%;
+        }
+    }
+
+    .roletta-download-catalog {
+        .download-catalog {
+            &__img {
+                top: -126px;
+                right: -20px;
+                max-width: 766px;
+            }
+        }
+    }
+
+    .roletta-control {
+        background-position: top 860px right -100px;
+
+        &__header {
+            .image {
+                right: -50px;
+                top: 15px;
+                width: 46%;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 1199.8px) {
+    .roletta-header {
+        padding: 10px 0 55px;
+
+        &::before {
+            bottom: 200px;
+        }
+
+        &__img {
+            bottom: 145px;
+            right: 0;
+            max-width: 38%;
+        }
+
+        p {
+            width: 66%;
+        }
+
+        &__card {
+            margin-top: 42px;
+        }
+    }
+
+    .function-roletta {
+        padding-bottom: 121px;
+
+        &__item {
+            margin-bottom: 38px;
+        }
+
+        .mb-87 {
+            margin-bottom: 55px;
+        }
+
+        &__form {
+            margin-top: 109px;
+            padding: 36px 60px 54px;
+        }
+    }
+
+    .circle {
+        width: 90px;
+        min-width: 90px;
+        height: 90px;
+
+        >img {
+            width: 46px;
+        }
+
+        &_big {
+            width: 150px;
+            min-width: 150px;
+            height: 150px;
+
+            >img {
+                width: 65px;
+            }
+        }
+    }
+}
+
+
+
+@media only screen and (min-width: 2000px) {
+    .roletta-control {
+        background-size: 890px;
+    }
+}
+
+@media only screen and (min-width: 3000px) {
+    .roletta-control {
+        background-size: 1050px;
     }
 }
